# taco

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: commands.rs  main.rs  ollama.rs
src/commands/: forget.rs  ping.rs
